--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 /*
 
  * sakura_ef.js 
- * @author Yoshirou Matsuda (matsuyoro@gmail.com) [http://e-com.webhop.net/wordpress/]
- * (c) Yoshirou Matsuda
+ * @author matsuyoro (matsuyoro@gmail.com) [http://matsudapress.com]
+ * (c) matsuyoro
 
  * excanvas.js  thank you for google
 
