--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 /*
 
  * sakura_ef.js 
- * @author matsuyoro (matsuyoro@gmail.com) [http://matsudapress.com]
+ * @author matsuyoro (matsuyoro@gmail.com) [https://matsudapress.com]
  * (c) matsuyoro
 
  * excanvas.js  thank you for google
